Added EF Core and Scaffold Database

--- a/eCommerce.API/appsettings.json
+++ b/eCommerce.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "eCommerceAppDBConnection": "Server=localhost;Database=eCommerceDB;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
