Setup JSON Web Tokens (JWT) Authentication

--- a/eCommerce.API/appsettings.json
+++ b/eCommerce.API/appsettings.json
@@ -24,5 +24,10 @@
       }
     ]
   },
+  "JwtSettings": {
+    "Audience": "eCommerceClient",
+    "Duration": 24,
+    "Issuer": "eCommerceAPI"
+  },
   "AllowedHosts": "*"
 }
