Added Authorizations Actions to Controller

--- a/eCommerce.API/appsettings.json
+++ b/eCommerce.API/appsettings.json
@@ -25,9 +25,9 @@
     ]
   },
   "JwtSettings": {
+    "Issuer": "eCommerceAPI",
     "Audience": "eCommerceClient",
-    "Duration": 24,
-    "Issuer": "eCommerceAPI"
+    "Duration": 1
   },
   "AllowedHosts": "*"
 }
